# ggml-gpt2-server

./: .dockerignore  .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  README.md  deploy.md  docker-compose.yml  requirements.txt
examples/: CMakeLists.txt
examples/gpt-2/: CMakeLists.txt  convert-h5-to-ggml.py  server.cpp
examples/gpt-2/tests/: test_server.py
scripts/: get_model.py
tests/: test_server.py
